# web

./: .env.example  .gitignore  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: alembic.ini  mypy.ini  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/app/: audit_log.py  auth.py  crud_audit.py  crud_availability.py  crud_intermittent.py  crud_mission.py  crud_user.py  db.py  deps.py  logging_setup.py  main.py  middleware.py  middleware_request_audit.py  models.py  models_audit.py  models_availability.py  models_intermittent.py  models_mission.py  models_user.py  routers_audits.py  routers_availabilities.py  routers_intermittents.py  routers_missions.py  routers_planning.py  routers_users.py  schemas_availability.py  schemas_intermittent.py  schemas_mission.py  schemas_user.py  security.py  settings.py
backend/tests/: test_audit.py  test_auth.py  test_healthz.py  test_intermittents.py  test_missions.py  test_planning.py  test_users.py
cli/: pyproject.toml
cli/cc/: __init__.py  cli.py
docs/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  OPS_LINUX.md  OPS_WINDOWS.md  RELEASE.md  ROADMAP.md  SECURITY.md
frontend/: .env.example  .eslintrc.cjs  index.html  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/tests/: e2e.spec.ts
scripts/ps1/: Backend-Dev.ps1  Backend-Migrate.ps1  Backend-Run.ps1  Backend-Seed.ps1  Backend-Test.ps1  CC-Dev.ps1  Format-Docs.ps1  Frontend-Build.ps1  Frontend-Dev.ps1  Frontend-E2E.ps1  Frontend-Test.ps1  New-Docs.ps1  (+3 more)
(+18 files in other folders)
